[gd_scene load_steps=8 format=3 uid="uid://csx32gyr0stfj"]

[ext_resource type="Script" uid="uid://oetjl21gpnyy" path="res://menus/main_menu/main_menu.gd" id="1_njfvw"]
[ext_resource type="Texture2D" uid="uid://bxb4kosby1x3h" path="res://art_assets/title_text/title_alt.png" id="2_oic2i"]
[ext_resource type="Texture2D" uid="uid://dliyrf6gekis2" path="res://art_assets/play_text/play_text_alt.png" id="3_er5qh"]
[ext_resource type="Texture2D" uid="uid://bdyt463wupkns" path="res://art_assets/high_scores_text/high_scores_text_alt.png" id="4_f7ts8"]
[ext_resource type="Texture2D" uid="uid://dajwwd4cjj1dn" path="res://art_assets/tutorial_text/tutorial_text_alt.png" id="5_81su3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvwmr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gug58"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_njfvw")

[node name="Background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 480.0

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(160, 72)
texture = ExtResource("2_oic2i")

[node name="PlayButton" type="Node2D" parent="."]

[node name="PlayButtonBackground" type="ColorRect" parent="PlayButton"]
offset_left = 92.0
offset_top = 142.0
offset_right = 228.0
offset_bottom = 197.0
color = Color(0, 0, 0, 1)

[node name="PlayText" type="Sprite2D" parent="PlayButton"]
position = Vector2(160, 174)
texture = ExtResource("3_er5qh")

[node name="PlayButton" type="Button" parent="PlayButton"]
offset_left = 92.0
offset_top = 142.0
offset_right = 228.0
offset_bottom = 197.0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pvwmr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gug58")
flat = true

[node name="HighScores" type="Node2D" parent="."]
position = Vector2(0, 80)

[node name="HighScoresButtonBackground" type="ColorRect" parent="HighScores"]
offset_left = 92.0
offset_top = 142.0
offset_right = 228.0
offset_bottom = 197.0
color = Color(0, 0, 0, 1)

[node name="HighScoresButton" type="Button" parent="HighScores"]
offset_left = 92.0
offset_top = 142.0
offset_right = 228.0
offset_bottom = 197.0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pvwmr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gug58")
flat = true

[node name="HighScoresText" type="Sprite2D" parent="HighScores"]
position = Vector2(161, 171)
texture = ExtResource("4_f7ts8")

[node name="Tutorial" type="Node2D" parent="."]
position = Vector2(0, 160)

[node name="TutorialButtonBackground" type="ColorRect" parent="Tutorial"]
offset_left = 92.0
offset_top = 142.0
offset_right = 228.0
offset_bottom = 197.0
color = Color(0, 0, 0, 1)

[node name="TutorialButton" type="Button" parent="Tutorial"]
offset_left = 92.0
offset_top = 142.0
offset_right = 228.0
offset_bottom = 197.0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pvwmr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gug58")
flat = true

[node name="TutorialText" type="Sprite2D" parent="Tutorial"]
position = Vector2(160, 180)
texture = ExtResource("5_81su3")

[connection signal="pressed" from="PlayButton/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HighScores/HighScoresButton" to="." method="_on_high_scores_button_pressed"]
[connection signal="pressed" from="Tutorial/TutorialButton" to="." method="_on_tutorial_button_pressed"]
